apps/wsdjs_web/assets/css/componants/player.css
.player {
  margin-top: 50px;
  width: 100%;
  min-height: 75px;
  background: #EEE;

  max-width: 468px;

  position: fixed;
  bottom: 0;
  right: 0;
  left: 0;
  margin-right: auto;
  margin-left: auto;
  z-index: 1000;
}
.current-played {
  display: flex;
  align-items: center;
}
.current-played[hidden] {
  display: none;
}
.player__art, .player__toggle__art {
  width: 75px;
  height: 75px;
  box-shadow: 3px 0 3px 0 rgba(0, 0, 0, 0.4);
  flex: 0 0 75px;
}
.player__description {
  overflow: hidden;
  flex: 1 1 auto;
  padding: 5px 5px 5px 15px;
}
.player__description > h6 {
  padding-bottom: 1px;
  margin-bottom: 0;
}
.player__description__title {
  color: black;
  font-weight: 100;
  text-decoration: none;
  border-bottom: 1px dashed rgba(155, 155, 155, 0.5);
}
.player__description__sub-title {
  margin-top: 0;
}
.player__description__title:hover {
  text-shadow: 1px 1px 5px #000000;
}
.player__play {
  display: flex;
  flex-direction: column;
  flex: 0 0 55px;
  height: 100%;
  margin-right: 15px;  
}
.player__play__vinyl {
  width: 55px;
  height: 55px;
  border-radius: 50%;
  margin-top: -25px;
  box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.35);
  text-align: center;
  cursor: pointer;
  background: white;

  background: url("data:image/svg+xml,%3Csvg fill='%23000000' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'%3E %3Cpath d='M8 5v14l11-7z'/%3E %3Cpath d='M0 0h24v24H0z' fill='none'/%3E %3C/svg%3E"), #FFF;
  background-repeat: no-repeat;
  background-position: 50% 50%;
}
.player__expand {
  margin-top: auto;
  width: 100%;
  height: 24px;
  background-image: url("data:image/svg+xml,%3Csvg fill='%23000000' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'%3E %3Cpath d='M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z'/%3E %3Cpath d='M0 0h24v24H0z' fill='none'/%3E %3C/svg%3E");
  background-repeat: no-repeat;
  background-position: 50% 50%;
  cursor: pointer;
}

.player__expand--open {
  background-image: url("data:image/svg+xml,%3Csvg fill='%23000000' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'%3E %3Cpath d='M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z'/%3E %3Cpath d='M0 0h24v24H0z' fill='none'/%3E %3C/svg%3E");
}

.player--playing .player__play__vinyl {
  transition: all 0.35s ease;
  background: url("//res.cloudinary.com/don2kwaju/image/upload/c_scale,dpr_auto,f_auto,h_55,q_auto,w_55/v1502383947/wsdjs/vinyl.png");
  background-size: cover;
  animation: spin 1s infinite linear;
}
.player__play__vinyl:hover {
  box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.5);
}

.player__youtube {
  position: relative;
  padding-bottom: 56.23%;
  /* Use 75% for 4:3 videos */
  height: 0;
  overflow: hidden;
  max-width: 100%;
  min-width: 100%;
  background: #000;
}

.player__youtube iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 100;
  background: transparent;
}
.player__toggle {
  display: flex;
  cursor: pointer;
  align-items: center;
}
.player__toggle[hidden] {
  display: none;
}
.player__toggle h4 {
  margin-left: 15px;
}

@keyframes spin {
  0% {
  transform: rotate(0deg);
  }
  100% {
  transform: rotate(360deg);
  }
}
.already-played {
  max-height: 0;
  transition: max-height 1s ease-out;
}
.already-played--open {
  overflow:hidden;
  transition: max-height 1s ease-out; 
  height:auto;
  max-height: 500px;
}

